# gmw_ramm_docs

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  plantuml.yaml  pyproject.toml  sitemap.xml
.github/workflows/: publish.yaml
docs/: index.md  stage1.md  stage2.md  system_architecture.md
docs/uml/: arch.puml  arch.txt
search/: search_index.json
stage1/: index.html
stage2/: index.html
system_architecture/: index.html
